# badness

./: .gitattributes  .gitignore  .versionary-manifest.json  AGENTS.md  BENCH.md  BIB_PARSE_COMPAT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PARSE_COMPAT.md  README.md  TODO.md  Taskfile.yml  build.rs  devenv.nix  flake.nix  panache.toml  pyproject.toml  versionary.jsonc
.claude/skills/add-lint-rule/: SKILL.md
.claude/skills/bench/: SKILL.md
.claude/skills/bib-parse-compat/: BIB_PARSE_COMPAT.md  SKILL.md
.claude/skills/parse-compat/: PARSE_COMPAT.md  SKILL.md
.claude/skills/profile/: SKILL.md
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  docs.yml  lint.yml  packages.yml  publish-code-extensions.yml  publish-crates.yml  publish-npm.yml  publish-pypi.yml
benches/: README.md  benchmark_results.json  compare_format.sh  formatting.rs
benches/documents/: .gitignore  download.sh  small.tex
branding/: _common.tex  logo.tex  og.tex  wordmark.tex
data/: arg_enums.json  bib_fields.json  class_names.txt  colors.json  cwl_signatures.json  package_metadata.json  package_names.txt  signatures.json  tikz_libraries.json
docs/: book.toml  parse-compat-triage.md
docs/doc-utils/: Cargo.toml
docs/doc-utils/src/: lib.rs  main.rs  postbuild.rs
docs/src/: SUMMARY.md  changelog.md  contributing.md  index.md  robots.txt
docs/src/guide/: editor-setup.md  formatting.md  getting-started.md  installation.md  linting.md  pre-commit.md
docs/src/reference/: benchmarks.md  bib-linter-rules.md  cli.md  configuration.md  linter-rules.md  wrap-modes.md
docs/theme/: bench-charts.css  bench-charts.js  brand.css
editors/code/: CHANGELOG.md  README.md  package-lock.json  package.json
editors/code/src/: extension.ts  installer.ts
examples/: docgen.rs
npm/badness/: README.md  package.json
npm/platform-template/: README.md  package.json
scripts/: gen_bib_fields.py  gen_cwl_signatures.py  gen_package_names.py  publish-npm-stubs.sh
src/: ast.rs  bib.rs  cli.rs  completion.rs  config.rs  file_discovery.rs  formatter.rs  incremental.rs  lib.rs  linter.rs  lsp.rs  main.rs  parser.rs  project.rs  semantic.rs  syntax.rs  text.rs
src/ast/: nodes.rs  tokens.rs
src/bib/: ast.rs  completion.rs  core.rs  document_link.rs  events.rs  formatter.rs  grammar.rs  lexer.rs  linter.rs  outline.rs  semantic.rs  syntax.rs  tree_builder.rs
src/bib/ast/: nodes.rs
src/bib/formatter/: core.rs  sort.rs
src/bib/linter/: check.rs  docs.rs  rules.rs  suppression.rs
src/bib/semantic/: builder.rs  entry.rs  signature.rs
src/formatter/: check.rs  colspec.rs  context.rs  core.rs  ir.rs  printer.rs  sentence.rs  style.rs
src/linter/: check.rs  conditional.rs  diagnostic.rs  docs.rs  fix.rs  render.rs  rules.rs  suppression.rs
src/linter/rules/: abbreviation_spacing.rs  dash_length.rs  deprecated_command.rs  dollar_display_math.rs  duplicate_label.rs  duplicate_package.rs  ellipsis.rs  makeat_macro.rs  (+18 more)
src/lsp/: code_action.rs  completion_resolve.rs  document_link.rs  folding.rs  hover.rs  name_refs.rs  selection_range.rs  signature_help.rs  task_pool.rs
src/parser/: core.rs  events.rs  grammar.rs  lexer.rs  tree_builder.rs
src/project/: aux.rs  citations.rs  graph.rs  include.rs  labels.rs  options.rs  package.rs  texmf.rs
src/semantic/: builder.rs  define.rs  doc.rs  label.rs  load.rs  outline.rs  pkgmeta.rs  signature.rs  xparse.rs
src/text/: line_index.rs
tests/: bib_format.rs  bib_lexer_snapshots.rs  bib_lint.rs  bib_parse_compat.rs  bib_parse_compat_allowlist.toml  bib_parse_oracle.rs  bib_parser.rs  bib_roundtrip.rs  bib_rule_docs.rs  bib_semantic.rs  dtx.rs  format.rs  format_packages.rs  incremental.rs  lexer_snapshots.rs  lint.rs  lsp.rs  package.rs  parse_compat.rs  parse_compat_allowlist.toml  parse_oracle.rs  parser.rs  project.rs  roundtrip.rs  rule_docs.rs  semantic.rs
tests/bib_corpus/: README.md  accents_and_braces.bib  basic.bib  biblatex_examples.bib  biblatex_relations.bib  paren_and_messy.bib  strings_and_preamble.bib
tests/corpus/: accents.tex  basic.tex  citations.tex  comments_trivia.tex  conditionals.tex  display_math.tex  edge.tex  environments.tex  file_inclusion.tex  footnotes.tex  graphics.tex  malformed.tex  math.tex  math_operators.tex  nested_envs.tex  newcommand.tex  optional_args.tex  sectioning.tex  tables.tex  theorems.tex  unicode_special.tex  verbatim_cmd.tex  verbatim_env.tex
tests/snapshots/: bib_lexer_snapshots__lex_entry.snap  bib_lexer_snapshots__lex_newlines_and_whitespace.snap  bib_lexer_snapshots__lex_quoted_and_concat.snap  bib_lexer_snapshots__lex_word_vs_number.snap  bib_parser__braces_protect_quote_in_quoted_value.snap  bib_parser__comment_entry.snap  bib_parser__concatenation.snap  bib_parser__junk_between_entries.snap  bib_parser__key_only_entry.snap  bib_parser__missing_entry_type.snap  bib_parser__missing_equals.snap  bib_parser__missing_field_separator.snap  bib_parser__nested_braces.snap  bib_parser__paren_delimited_entry.snap  bib_parser__preamble_entry.snap  bib_parser__quoted_and_braced_values.snap  bib_parser__regular_entry.snap  bib_parser__stray_at_starts_new_entry.snap  bib_parser__string_entry.snap  bib_parser__trailing_comma.snap  bib_parser__unterminated_brace.snap  bib_parser__unterminated_quote.snap  bib_rule_docs__duplicate_field.snap  bib_rule_docs__duplicate_key.snap  bib_rule_docs__empty_field.snap  bib_rule_docs__encoding_hints.snap  bib_rule_docs__missing_required_field.snap  bib_rule_docs__title_capitalization.snap  bib_rule_docs__undefined_string.snap  bib_rule_docs__unknown_field.snap  bib_rule_docs__unused_string.snap  format__format_output_snapshot.snap  lexer_snapshots__lex_command_with_args.snap  lexer_snapshots__lex_comment_and_paragraph.snap  lexer_snapshots__lex_environment.snap  lexer_snapshots__lex_inline_math.snap  parser__blank_line_breaks_the_leading_bind.snap  parser__brace_verbatim_command_argument_is_a_child.snap  parser__command_with_required_and_optional_args.snap  parser__comment_after_blank_line_still_binds.snap  (+61 more)
tests/support/: bib_skeleton.rs  parse_skeleton.rs
(+281 files in other folders)
