[package]
name = "badness"
version = "0.4.0"
edition = "2024"
readme = "README.md"
description = "An LSP, formatter, and linter for LaTeX"
license = "MIT"
repository = "https://github.com/jolars/badness"
homepage = "https://badness.dev/"
authors = ["Johan Larsson <johan@jolars.co>"]
keywords = ["latex", "language-server", "formatter", "linter"]
categories = [
  "command-line-utilities",
  "text-processing",
  "parsing",
  "parser-implementations",
]

[lib]
name = "badness"

[[bin]]
name = "badness"
path = "src/main.rs"

# Dependency versions are kept in lockstep with the sibling project `arity`
# (../arity) so the eventual shared-crate extraction stays a mechanical lift.
# Deps are added phase by phase (salsa, lsp-server, clap, … land with their
# phases) to keep `cargo machete` clean.
[dependencies]
annotate-snippets = "0.12.16"
clap = { version = "4.5.51", features = ["derive"] }
crossbeam-channel = "0.5"
ignore = "0.4.26"
log = { version = "0.4.32", features = ["release_max_level_info"] }
lsp-server = "0.7"
lsp-types = "0.97"
# The bulk CWL signature tier is baked into the binary as a `phf` map by build.rs
# (perfect-hash, zero runtime parse/decompress); the runtime crate provides the
# `phf::Map` lookup type. See `src/semantic/signature.rs`.
phf = "0.11"
rowan = "0.16.1"
salsa = "0.27.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol_str = "0.3.2"
toml = "1"

# build.rs generates a `phf::Map` of the bulk CWL signature tier from
# data/cwl_signatures.json into OUT_DIR, baked into the binary as read-only
# statics with zero runtime parse/decompress (see src/semantic/signature.rs).
[build-dependencies]
phf_codegen = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# In-process formatter micro-benchmarks (benches/formatting.rs). `harness =
# false`: a plain main with fixed iteration counts (not criterion) so a
# flamegraph attaches cleanly to a single hot document — see the bench's header.
[[bench]]
name = "formatting"
harness = false

# Strip symbols from release binaries. The CWL signature tier is baked in as
# ~13k generated static initializers (see build.rs); their symbol/line metadata
# added ~1.3 MB to the unstripped binary while contributing nothing at runtime.
# Stripping recovers that, leaving only the ~1.6 MB of read-only `phf` data.
[profile.release]
strip = "symbols"

[dev-dependencies]
insta = "1.47.2"
tempfile = "3"
# Differential parse oracle (tests/parse_oracle.rs, tests/parse_compat.rs).
texlab-parser = { git = "https://github.com/latex-lsp/texlab", package = "parser", rev = "adc91ff8a3b56ba4b72c489db33f32cfbb8b2c5c" }
texlab-syntax = { git = "https://github.com/latex-lsp/texlab", package = "syntax", rev = "adc91ff8a3b56ba4b72c489db33f32cfbb8b2c5c" }
