[package]
name = "badness"
version = "0.10.0"
edition = "2024"
readme = "README.md"
description = "A language server, formatter, and linter for LaTeX"
license = "MIT"
repository = "https://github.com/jolars/badness"
homepage = "https://badness.dev/"
documentation = "https://badness.dev"
authors = ["Johan Larsson <johan@jolars.co>"]
keywords = ["latex", "language-server", "formatter", "linter"]
categories = [
  "command-line-utilities",
  "text-processing",
  "parsing",
  "parser-implementations",
]

[lib]
name = "badness"

[[bin]]
name = "badness"
path = "src/main.rs"

[dependencies]
annotate-snippets = "0.12.16"
clap = { version = "4.5.51", features = ["derive"] }
crossbeam-channel = "0.5"
dirs = "6.0.0"
ignore = "0.4.26"
log = { version = "0.4.32", features = ["release_max_level_info"] }
lsp-server = "0.10"
lsp-types = "0.97"
phf = "0.14"
rayon = "1.10"
rowan = "0.16.1"
salsa = "0.28.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol_str = "0.3.2"
toml = "1"

[build-dependencies]
clap = { version = "4.5.51", features = ["derive"] }
clapdown = "0.1.0"
clap_complete = "4.6.5"
clap_mangen = "0.3.0"
phf_codegen = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "formatting"
harness = false

[profile.release]
strip = "symbols"

[dev-dependencies]
insta = "1.47.2"
tempfile = "3"
texlab-parser = { git = "https://github.com/latex-lsp/texlab", package = "parser", rev = "adc91ff8a3b56ba4b72c489db33f32cfbb8b2c5c" }
texlab-syntax = { git = "https://github.com/latex-lsp/texlab", package = "syntax", rev = "adc91ff8a3b56ba4b72c489db33f32cfbb8b2c5c" }
