[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "badness"
description = "An LSP, formatter, and linter for LaTeX"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Johan Larsson", email = "johan@jolars.co" }]
keywords = ["latex", "language-server", "formatter", "linter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://jolars.github.io/badness/"
Repository = "https://github.com/jolars/badness"
Documentation = "https://jolars.github.io/badness/"

[tool.maturin]
# Package the existing `badness` binary (not a Python extension module) as a wheel.
bindings = "bin"
strip = true
